--- a/app/package.json
+++ b/app/package.json
@@ -13,8 +13,14 @@
     "index": "www.js"
   },
   "dependencies": {
+    "cookie-parser": "^1.4.5",
+    "debug": "^4.3.1",
     "ejs": "^3.1.6",
-    "express": "^4.17.1"
+    "express": "^4.17.1",
+    "http-errors": "^1.8.0",
+    "morgan": "^1.10.0",
+    "multer": "^1.4.2",
+    "mysql": "^2.18.1"
   },
   "devDependencies": {},
   "description": "MIT"
