--- a/app/package.json
+++ b/app/package.json
@@ -14,9 +14,11 @@
   },
   "dependencies": {
     "cookie-parser": "^1.4.5",
+    "crypto": "^1.0.1",
     "debug": "^4.3.1",
     "ejs": "^3.1.6",
     "express": "^4.17.1",
+    "express-session": "^1.17.2",
     "http-errors": "^1.8.0",
     "morgan": "^1.10.0",
     "multer": "^1.4.2",
