Admin 세션생//웹프과제제출본

--- a/app/package.json
+++ b/app/package.json
@@ -22,7 +22,8 @@
     "http-errors": "^1.8.0",
     "morgan": "^1.10.0",
     "multer": "^1.4.2",
-    "mysql": "^2.18.1"
+    "mysql": "^2.18.1",
+    "route": "^0.2.5"
   },
   "devDependencies": {},
   "description": "MIT"
